# assetpack

./: CMakeLists.txt  README.md  main.cpp  rebuild.sh  test.cpp
.github/workflows/: build.yml  test.yml
cmakes/: compile_shader.cmake  setup.cmake  utilities.cmake
